Refactor and add methods for Room, Actor, and related classes
Added new charging methods to handle different priorities in Student class. Enhanced Room, Actor, and RoomEffect classes with utility methods for entities. Created new test cases "TwoTeachersOneStudent", "CamembertUsage", and "Gas" to validate system functionality.